--- a/users/templates/website/blog.html
+++ b/users/templates/website/blog.html
@@ -32,6 +32,11 @@
 	<link rel='stylesheet' href="{% static "web/css/scooterrental.css"%}">
 	<link rel='stylesheet' href="{% static "web/css/custom.css"%}"> 
 	</head>
+	<style>
+	.gothic{
+		font-family:century-gothic
+	}
+	</style>
 
 <body class="page-template-default page color-custom style-simple button-custom layout-full-width if-zoom if-border-hide no-content-padding no-shadows header-classic sticky-header sticky-tb-color ab-hide subheader-both-center menu-link-color menuo-right menuo-no-borders footer-copy-center mobile-tb-hide mobile-side-slide mobile-mini-mr-ll tablet-sticky mobile-sticky ">
 	<div id="Wrapper">
@@ -47,11 +52,11 @@
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li class=" page_item"> <a href="{% url 'index' %}"><span>Home</span></a> </li>
+											<li class=" page_item"> <a href="{% url 'index' %}"><span class="gothic">Home</span></a> </li>
 											{% comment %} <li> <a href="{% url 'about' %}"><span>About us</span></a> </li> {% endcomment %}
-											<li> <a href="{% url 'rainwater' %}"><span>Rain Water</span></a> </li>
-											<li class="current-menu-item"><a href="{% url 'blog' %}"><span>Blog</span></a> </li>
-											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
+											<li> <a href="{% url 'rainwater' %}"><span class="gothic">Rain Water</span></a> </li>
+											<li class="current-menu-item"><a href="{% url 'blog' %}"><span class="gothic">Blog</span></a> </li>
+											<li> <a href="{% url 'contact_us' %}"><span class="gothic">Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="fa fa-bars" ></i></a> </div>
 							</div>
@@ -76,10 +81,10 @@
 										</div>
 										<div class="column mcb-column mcb-item-xhgolw32g two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>water access</h6>
+												<h6 style="color:#FFF;"><span class="gothic" style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>water access</h6>
 												<hr class="no_line" style="margin:0 auto 20px">
 												<h1 style="color:#FFF;">
-													<span class="themecolor">Blog</span></h1>
+													<span class="themecolor gothic">Blog</span></h1>
 												<hr class="no_line" style="margin:0 auto 20px">
 												 </div>
 										</div>
@@ -135,20 +140,22 @@
                                                     <div class="post-head">
                                                         <div class="post-meta clearfix">
                                                             <div class="author-date">
-                                                                <span class="date"><span class="post-date updated">{{blog.Published_at}}</span></span>
+                                                                <span class="date"><span class="post-date updated gothic">{{blog.Published_at}}</span></span>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="post-title" >
-                                                        <h2 class="entry-title" style:"color:#1f1f1f"><a href="{% url 'single_blog' blog.id %}">{{blog.Title}}</a></h2>
+                                                        <h2 class="entry-title gothic" style:"color:#1f1f1f"><a href="{% url 'single_blog' blog.id %}">{{blog.Title}}</a></h2>
                                                     </div>
                                                     <div class="post-excerpt">
+													<p class="gothic">
                                                         {{blog.Details|slice:":250"}}...
+													</p>
                                                     </div>
                                                     <div class="post-footer">
                                                         
                                                         <div class="post-links">
-                                                            <a href="{% url 'single_blog' blog.id %}" class="post-more">Read more</a>
+                                                            <a href="{% url 'single_blog' blog.id %}" class="post-more gothic">Read more</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -195,12 +202,12 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
+									<h6 style="color:#7d7d7d" class="gothic">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									{% comment %} <p> <a href="{% url 'about' %}"> About us</a> </p> {% endcomment %}
 									{% comment %} <p> <a href="{% url 'service' %}">Service</a> </p> {% endcomment %}
-									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
-									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
+									<p class="gothic"> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
+									<p class="gothic"> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -209,14 +216,14 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Rainwater is safe water
+									<h3 class="gothic">Rainwater is safe water
 										<br>
 										 
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US</a> </p>
+									<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US</a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -225,11 +232,11 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">MORE INFO</h6>
+									<h6 class="gothic" style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p ><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
-									<p><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
-									<p><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
+									<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
+									<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
+									<p class="gothic"><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
 								</div>
 							</div>
 						</aside>
