--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -48,11 +48,11 @@
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main" >
-											<li class="  page_item "> <a href="{% url 'index' %}"><span>Home</span></a> </li>
+											<li class="  page_item "> <a href="{% url 'index' %}"><span class="gothic">Home</span></a> </li>
 											{% comment %} <li> <a href="{% url 'about' %}"><span>About us</span></a> </li> {% endcomment %}
-											<li class="current-menu-item"> <a href="{% url 'rainwater' %}"><span>Rain Water</span></a> </li>
-											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
-											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
+											<li class="current-menu-item"> <a href="{% url 'rainwater' %}"><span class="gothic">Rain Water</span></a> </li>
+											<li> <a href="{% url 'blog' %}"><span class="gothic">Blog</span></a> </li>
+											<li> <a href="{% url 'contact_us' %}"><span class="gothic">Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="fa fa-bars" ></i></a> </div>
 							</div>
@@ -77,12 +77,12 @@
 										</div>
 										<div class="column mcb-column mcb-item-75ad2287a two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>AMAZI</h6>
+												<h6 style="color:#FFF;" class="gothic"><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>AMAZI</h6>
 												<hr class="no_line" style="margin:0 auto 20px">
-												<h1 style="color:#FFF;"><span class="themecolor">RainWater is safe water</span>
+												<h1 style="color:#FFF;"><span class="themecolor gothic">RainWater is safe water</span>
 													</h1>
 												<hr class="no_line" style="margin:0 auto 20px">
-												<h5 style="color:#FFF;">Rain water is perfectly safe to consume. The only contamination happens as it falls on our roofs, collecting with it different contaminants. With our first flush diverter, often called a roof washer, you can preserve the safety of your rain water.
+												<h5 style="color:#FFF;" class="gothic">Rain water is perfectly safe to consume. The only contamination happens as it falls on our roofs, collecting with it different contaminants. With our first flush diverter, often called a roof washer, you can preserve the safety of your rain water.
 													</h5> </div>
 										</div>
 									</div>
@@ -99,9 +99,9 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-7e0a6c322 one column_column column-margin-20px">
 											<div class="column_attr clearfix" style>
-												<h2><span class="themecolor">We</span> Can Stop Flooding</h2>
+												<h2><span class="themecolor gothic">We</span> Can Stop Flooding</h2>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<h5>Increased flooding threatens our city's safety and destroys our infrastructure. 
+												<h5 class="gothic">Increased flooding threatens our city's safety and destroys our infrastructure. 
 													Yet this can be easily prevented, if we all harvested some rain water. The more we harvest rainwater, 
 													the less runoff there will be, thus reducing the chance of flash floods after heavy rains.</h5>
 												<hr class="no_line" style="margin:0 auto 10px">
@@ -131,9 +131,9 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-7e0a6c322 one column_column column-margin-20px">
 											<div class="column_attr clearfix" style>
-												<h3><span class="themecolor">Current Issues with Rainwater Can Stop Flooding </span></h3>
+												<h3><span class="themecolor gothic">Current Issues with Rainwater Can Stop Flooding </span></h3>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<h5>Currently, rain water in Rwanda has a bad reputation. This is mainly due to how rain water harvesting is currently done. Without proper installation, everything from the roof (including dust, bird poop, smog from cars) collects in the rain water tank. This leads to:</h5>
+												<h5 class="gothic">Currently, rain water in Rwanda has a bad reputation. This is mainly due to how rain water harvesting is currently done. Without proper installation, everything from the roof (including dust, bird poop, smog from cars) collects in the rain water tank. This leads to:</h5>
 												<hr class="no_line" style="margin:0 auto 10px">
 												
 											</div>
@@ -146,9 +146,9 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-b6e2ae677 one column_image">
 										<h5>
-										<li>bacteria contamination of the water.</li>
-										<li>black-ish color to the water</li>
-										<li>water that smells bad even after boiling</li>
+										<li class="gothic">bacteria contamination of the water.</li>
+										<li class="gothic">black-ish color to the water</li>
+										<li class="gothic">water that smells bad even after boiling</li>
 										</h5>
 
 										</div>
@@ -164,9 +164,9 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-7e0a6c322 one column_column column-margin-20px">
 											<div class="column_attr clearfix" style>
-												<h2><span class="themecolor">The First Flush diverter</span></h2>
+												<h2><span class="themecolor gothic">The First Flush diverter</span></h2>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<h5>Known as a roof washer, it flushes your roof by diverting the first
+												<h5 class="gothic">Known as a roof washer, it flushes your roof by diverting the first
 												 flow of dirty rainwater away from your tank. This keeps away the most 
 												 contaminated water while your tank collects the higher quality rain water.
 												  For Only RWF 80,000 you can get one.</h5>
@@ -201,10 +201,10 @@
 
 
 						<div class="column_attr clearfix align_center" >
-								<h2><span class="themecolor">
+								<h2><span class="themecolor gothic">
 								Add A Full House Filter for</span> </h2>
 								<br>
-								<h2><span class="themecolor">
+								<h2><span class="themecolor gothic">
 								Maximum Safety.</span> </h2>
 								<br>
 								<h5 class='gothic'>Complete the filter selection form and we will help you <br> choose the most appropriate for your family. </h5>
@@ -234,9 +234,9 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-7e0a6c322 one column_column column-margin-20px">
 											<div class="column_attr clearfix" style>
-												<h2><span class="themecolor">Safety, Comfortable and Impact<span></h2>
-												<h4>With the full Amazi System:</h4>
-												<h5>
+												<h2><span class="themecolor gothic">Safety, Comfortable and Impact<span></h2>
+												<h4 class="gothic">With the full Amazi System:</h4>
+												<h5 class="gothic">
 												<li>your family enjoys clean safe water throughout the house.</li>
 												<li>Your rain season water bill reduces (RAINWATER IS FREE WATER)</li>
 												<li>You participate in protecting our environment.</li>
@@ -262,9 +262,9 @@
 
 
 						<div class="column_attr clearfix align_center" >
-								<h2><span class="themecolor">
+								<h2><span class="themecolor gothic">
 								BEFORE AND AFTER</span> </h2><br>
-								<h5>we conducted a pilot to see what our system would achieve for our users. Here is what happened and what you can expect.</h5>
+								<h5 class="gothic">we conducted a pilot to see what our system would achieve for our users. Here is what happened and what you can expect.</h5>
 												<hr class="no_line" style="margin:0 auto 20px">
 						</div>
 						<div class="section_wrapper mcb-section-inner">
@@ -273,8 +273,8 @@
 										<div class="column mcb-column mcb-item-qyuetn73g one-fourth column_quick_fact">
 											<div class="quick_fact align_ animate-math">
 											<div><img class="scale-with-grid" src="{% static "web/images/money.png" %}" style="width:50px;height:50px"></div>
-											<h4><span class="themecolor">Save Money</span> </h4>												
-											<h5>ALL HOUSEHOLDS reduced their water bill by 58% One family went from RWF 25,000 to Just RWF 6,000!.</h5>
+											<h4><span class="themecolor gothic">Save Money</span> </h4>												
+											<h5 class="gothic">ALL HOUSEHOLDS reduced their water bill by 58% One family went from RWF 25,000 to Just RWF 6,000!.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div>
@@ -282,8 +282,8 @@
 										<div class="column mcb-column mcb-item-z73733ieu one-fourth column_quick_fact">
 											<div class="quick_fact align_ animate-math">
 												<div><img class="scale-with-grid" src="{% static "web/images/maledrink.png" %}" style="width:50px;height:50px"> </div>
-											   <h4><span class="themecolor">Trust your water tap</span> </h4>
-												<h5>Savings: 100% of all households were buying their drinking water, after our system 63% had switched to drinking from their taps.</h5>
+											   <h4><span class="themecolor gothic">Trust your water tap</span> </h4>
+												<h5 class="gothic">Savings: 100% of all households were buying their drinking water, after our system 63% had switched to drinking from their taps.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div> 
@@ -291,8 +291,8 @@
 										<div class="column mcb-column mcb-item-5fltm4adk one-fourth column_quick_fact">
 											<div class="quick_fact align_ animate-math">
 												<div><img class="scale-with-grid" src="{% static "web/images/glass.png" %}" style="width:50px;height:50px"> </div>
-											   <h4><span class="themecolor">Safe and Clean for Drinking</span> </h4> </div>
-												<h5>Before no one trusted drinking rainwater, this number increased to 87% drinking directly from their taps.</h5>
+											   <h4><span class="themecolor gothic">Safe and Clean for Drinking</span> </h4> </div>
+												<h5 class="gothic">Before no one trusted drinking rainwater, this number increased to 87% drinking directly from their taps.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div>
@@ -300,8 +300,8 @@
 										<div class="column mcb-column mcb-item-hfbzurgtu one-fourth column_quick_fact">
 											<div class="quick_fact align_ animate-math">
 												<div><img class="scale-with-grid" src="{% static "web/images/cooking.png" %}" style="width:50px;height:50px"> </div>
-											   <h4><span class="themecolor">Cooking Made Easy</span> </h4> </div>
-												<h5>Only 33% of households trusted their water for cooking, this increased to 100% after the installation of our system.</h5>
+											   <h4 class="gothic"><span class="themecolor">Cooking Made Easy</span> </h4> </div>
+												<h5 class="gothic">Only 33% of households trusted their water for cooking, this increased to 100% after the installation of our system.</h5>
 												<hr class="hr_narrow">
 												<div class="desc"></div>
 											</div>
@@ -309,7 +309,7 @@
 									</div>
 								</div>
 								<div class="column_attr clearfix align_center" >
-								<h4><span class="themecolor">Start saving today !</span> </h4>
+								<h4><span class="themecolor gothic">Start saving today !</span> </h4>
 								</div>
 							</div>
 
@@ -330,12 +330,12 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
+									<h6 style="color:#7d7d7d" class="gothic">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									{% comment %} <p> <a href="{% url 'about' %}"> About us</a> </p> {% endcomment %}
-									<p> <a href="https://www.warwanda.com/">Service</a> </p>
-									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
-									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
+									<p class="gothic"> <a href="https://www.warwanda.com/">Service</a> </p>
+									<p class="gothic"> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
+									<p class="gothic"> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -344,14 +344,14 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Rainwater is safe water
+									<h3 class="gothic">Rainwater is safe water
 										<br>
 										 
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
+									<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -360,11 +360,11 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">MORE INFO</h6>
+									<h6 style="color:#7d7d7d" class="gothic">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p ><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
-									<p><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
-									<p><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
+									<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
+									<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
+									<p class="gothic"><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
 								</div>
 							</div>
 						</aside>
